fixed some mobile overflow bugs

--- a/src/css/pages/home.module.css
+++ b/src/css/pages/home.module.css
@@ -44,11 +44,13 @@ p.smallText a {
 /* mobile */
 @media only screen and (max-width: 900px) {
   .mainpageContainer > div:first-child {
-    padding:0;
+    padding:20px;
   }
 
   .mainpageContainer p{
     font-size:1em !important;
+    display:flex;
+    flex-direction: column;
   }
 }
 
@@ -58,6 +60,7 @@ p.smallText a {
 
 #heroContainer{
   margin-bottom:20vh;
+  overflow:hidden;
 }
 
 .mainContentWrapper{
