--- a/src/css/utils/shapes.css
+++ b/src/css/utils/shapes.css
@@ -1,3 +1,6 @@
+.parallaxContainer::-webkit-scrollbar {
+  display: none;
+}
 
 .backgroundShapes{
   /* position: fixed; */
